# trackstargame

./: .env.example  .env.local.example  .eslintrc.json  .gitignore  API_TYPES_GUIDE.md  ARCHITECTURE_DECISIONS.md  CLAUDE.md  DEBUG_REPORT.md  PLANNING.md  README.md  STATE_MACHINE_USAGE.md  TANSTACK_QUERY_SETUP.md  deep_supabase_migration.md  drizzle.config.ts  figma_design_prompt.md  middleware.ts  next.config.ts  orval.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  server.mjs  tailwind.config.ts
app/: globals.css  layout.tsx  page.tsx
components/: auth-error-toast.tsx  spotify-sdk-script.tsx
docs/: API_REFACTOR_COMPLETE.md  ARTIST_GENRE_NORMALIZATION_COMPLETE.md  DAILY_PLAN.md  (+9 more)
scripts/: .cache  .env.example  PACK_COVERAGE_ANALYSIS.md  PACK_GENERATION_GUIDE.md  README.md  SPOTIFY_ENRICHMENT_PLAN.md  apply_artist_enrichment.py  apply_spotify_enrichment.py  backfill_genres_lastfm.py  backfill_track_metadata.py  check_status.py  create_pack_from_list.py  create_pack_from_playlist.py  create_pack_from_youtube.py  debug_spotify.py  deduplicate_enrichment.py  dump_prod_to_seed.sh  enrich_existing_tracks.py  enrich_existing_tracks_mcp.py  fetch_artist_metadata.py  fetch_spotify_metadata.py  generate-openapi.ts  generate_decade_genre_packs.py  generate_thematic_packs.py  list_channel_videos.py  list_packs.py  pyproject.toml  rolling_stone_top_100.txt  rolling_stone_top_20.txt  scrape_channel.py  scrape_rolling_stone.py  test_db_connection.py  test_scraping.py  test_spotify.py
scripts/utils/: __init__.py  db.py  parser.py  spotify.py  youtube.py
(+258 files in other folders)
